[gd_scene load_steps=16 format=2]

[ext_resource path="res://producto/scripts/Coleccionable.gd" type="Script" id=1]
[ext_resource path="res://producto/assets/img/Plataformas/Objects/Obj-Chest-Closed-24x24.png" type="Texture" id=2]
[ext_resource path="res://producto/assets/img/Plataformas/Objects/Obj-Chest-Opening-24x24.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 126.541, 29.5311 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "Close",
"speed": 4.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "Open",
"speed": 4.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": false,
"name": "Idle_Close",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": false,
"name": "Idle_Open",
"speed": 5.0
} ]

[node name="Coleccionable" type="Node2D"]
script = ExtResource( 1 )

[node name="ColeccionableArea" type="Area2D" parent="."]

[node name="ColeccionableOpen" type="CollisionShape2D" parent="ColeccionableArea"]
position = Vector2( 0, -11.225 )
shape = SubResource( 14 )

[node name="Coleccionable" type="AnimatedSprite" parent="ColeccionableArea"]
scale = Vector2( 3, 3 )
frames = SubResource( 13 )
animation = "Idle_Close"
speed_scale = 2.0
playing = true

[connection signal="body_entered" from="ColeccionableArea" to="." method="_on_ColeccionableArea_body_entered"]
[connection signal="body_exited" from="ColeccionableArea" to="." method="_on_ColeccionableArea_body_exited"]
